# fullerene

./: .gitignore  Doxyfile.in  LICENSE  README.md  build.sh  clean.sh
include/fullerene/: math.hpp  types.hpp
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/stream/: file.cpp  file.hpp  stream.hpp
src/video/: renderer.hpp
src/video/renderer/: vulkan.cpp  vulkan.hpp
